# XCOM-Save-Reader

./: .gitignore  Copy Current Saves.bat  Load Soldier List.bat  README.md  main.py  pyproject.toml  reader.py  requirements.txt  saves go here.txt  test_reader.py
.github/workflows/: python-app.yml
Soldier Stats/: Copy Current Saves.bat  XCOM Soldier List.xlsx  reader.py
src/: config.py  data_manager.py  inventory_formatter.py  main.py  reader.py  resource_manager.py  test_reader.py  translation_manager.py  view_utils.py
src/views/: base_view.py  main_menu.py  mission_view.py  settings_view.py  soldier_list.py  soldier_view.py
test/: Test Save.sav  test_base_view.py  test_config.py  test_data_manager.py  test_data_manager_security.py  test_inventory_formatter.py  test_main.py  test_reader.py  test_reader_edge_cases.py  test_security_makedirs.py  test_translation_manager.py  test_translation_manager_security.py  test_view_utils.py
user/: README.txt
user/piratez/: README.txt  XPiratez.sav  _autobattle_.asav  _autogeo_.asav  _quick_.asav  battle.cfg
